# PPTAiCreator

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ai_config.properties  pyproject.toml  requirements.txt
docs/: README.md  ux_ui_design_plan.md
docs/architecture/: ai_architecture.md
docs/guides/: gui_access_guide.md  run_viewer.md  service_management.md  settings_guide.md  windows_service_quick_start.md
docs/operations/: gui_non_api_acceptance_2026-02-13.md  production_readiness.md
examples/: sample_outline.json  sample_output.pptx  sample_prompt.txt
scripts/: create_default_templates.py  dev.ps1  e2e.ps1  format.ps1  generate_fresh_topic_set.py  generate_presentations_batch.py  generate_several_presentations.py  run_api.ps1  run_gui.ps1  test.ps1  validate_lmstudio.ps1  verify_gui.py  verify_template_installation.py
src/: __init__.py  api.py  app.py  app_educational_helpers.py  app_settings_helpers.py  config.py  events.py  schemas.py  server.py  state.py
src/agents/: __init__.py  brainstorm.py  content.py  design.py  pedagogical_auditor.py  qa.py  research.py
src/graph/: __init__.py  build_graph.py  langgraph_impl.py  nodes.py
src/models/: ai_config.py  ai_interface.py  client.py
src/storage/: __init__.py  backends.py
src/tools/: citations.py  fact_check.py  local_corpus_search.py  pptx_builder.py  template_manager.py
src/utils/: __init__.py  json_repair.py  presentation_helpers.py
src/workers/: preview_worker.py
templates/: README.md  default.pptx  professional.pptx
tests/: __init__.py  conftest.py  test_e2e_templates.py  test_template_integration.py  test_template_manager.py
tests/e2e/: test_api_e2e.py  test_comprehensive_agents.py  test_educational_mode_e2e.py  test_gui_e2e.py  test_playwright_enterprise_e2e.py  test_real_models_e2e.py
tests/integration/: test_fact_check.py  (+6 more)
(+14 files in other folders)
